--- a/Resource/template/entry_add_mailmaga.twig
+++ b/Resource/template/entry_add_mailmaga.twig
@@ -19,12 +19,27 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
-<dl>
-<dt>メールマガジン送付について<span class="required">必須</span></dt>
-<dd>
-    <div class="form-group form-inline">
-        {{ form_widget(form.mailmaga_flg) }}
-        {{ form_errors(form.mailmaga_flg) }}
-    </div>
-</dd>
-</dl>
+{%- extends 'Form/form_div_layout.twig' -%}
+
+{%- block _entry_mailmaga_flg_row -%}
+    <dl>
+        <dt>
+            {{- form_label(form) -}}
+        </dt>
+        <dd>
+            <div class="form-group form-inline">
+                <div class="ec-radio">
+                    {% if (app.request.get('mode') == 'confirm') %}
+                        {% for choice in form.vars.choices %}
+                            {% if choice.data == form.vars.data %}
+                                {{- choice.label|trans -}}
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    {{- form_widget(form) -}}
+                    {{- form_errors(form) -}}
+                </div>
+            </div>
+        </dd>
+    </dl>
+{%- endblock _entry_mailmaga_flg_row -%}
