--- a/Resource/template/admin/history_preview.twig
+++ b/Resource/template/admin/history_preview.twig
@@ -7,12 +7,12 @@
  For the full copyright and license information, please view the LICENSE
  file that was distributed with this source code.
 #}
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['customer', 'mailmagazine', 'mailmagazine_history'] %}
+{% set menus = ['mailmagazine', 'mailmagazine_history'] %}
 
-{% block title %}{{ 'plugin.mailmagazine.history.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
+{% block title %}{{ 'mailmagazine.history.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'mailmagazine.title'|trans }}{% endblock %}
 
 {% block main %}
 <div class="c-contentsArea__cols">
@@ -21,15 +21,15 @@
             <table class="table table-striped">
                 <tbody>
                 <tr>
-                    <th class="w-25">{{ 'plugin.mailmagazine.select.label_subject'|trans }}</th>
+                    <th class="w-25">{{ 'mailmagazine.select.label_subject'|trans }}</th>
                     <td>{{ history.subject }}</td>
                 </tr>
                 <tr>
-                    <th>{{ 'plugin.mailmagazine.select.label_body'|trans }}</th>
+                    <th>{{ 'mailmagazine.select.label_body'|trans }}</th>
                     <td><xmp>{{ history.body }}</xmp></td>
                 </tr>
                 <tr>
-                    <th>{{ 'plugin.mailmagazine.select.label_body_html'|trans }}</th>
+                    <th>{{ 'mailmagazine.select.label_body_html'|trans }}</th>
                     <td><xmp>{{ history.htmlBody|raw }}</xmp></td>
                 </tr>
                 </tbody>
@@ -43,7 +43,7 @@
             <div class="col-6">
                 <div class="c-conversionArea__leftBlockItem">
                     <a class="c-beseLink" href="{{ url('plugin_mail_magazine_history') }}">
-                        <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.mailmagazine.history.preview.btn_back'|trans }}</span>
+                        <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.history.preview.btn_back'|trans }}</span>
                     </a>
                 </div>
             </div>
