--- a/Resource/template/admin/confirm.twig
+++ b/Resource/template/admin/confirm.twig
@@ -12,12 +12,12 @@
 [メルマガ管理]-[配信内容設定]-[確認]画面
 #}
 
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['customer', 'mailmagazine', 'mailmagazine'] %}
+{% set menus = ['mailmagazine', 'mailmagazine'] %}
 
-{% block title %}{{ 'plugin.mailmagazine.index.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
+{% block title %}{{ 'mailmagazine.index.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'mailmagazine.title'|trans }}{% endblock %}
 
 {% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
@@ -30,7 +30,7 @@
         $(function () {
             $('#sendMailMagazine').on('click', function (e) {
                 e.preventDefault();
-                if (confirm('{{ 'plugin.mailmagazine.confirm.modal.confirm_prepare_message'|trans }}')) {
+                if (confirm('{{ 'mailmagazine.confirm.modal.confirm_prepare_message'|trans }}')) {
                     $(this).attr('disabled', 'disabled');
                     changeAction('{{ url('plugin_mail_magazine_prepare') }}');
                 }
@@ -49,7 +49,7 @@
                 }
             });
             $('#sendTestMail').on('click', function() {
-                if (confirm('{{ 'plugin.mailmagazine.confirm.modal.confirm_test_message'|trans }}')) {
+                if (confirm('{{ 'mailmagazine.confirm.modal.confirm_test_message'|trans }}')) {
                     $.post("{{ url('plugin_mail_magazine_test') }}", {
                         '_token': $('mail_magazine__token').val(),
                         'email': $('#testEmail').val(),
@@ -58,10 +58,10 @@
                         'body': $('#mail_magazine_body').val(),
                         'htmlBody': $('#mail_magazine_htmlBody').val()
                     }).done(function(res) {
-                        alert('{{ 'plugin.mailmagazine.confirm.modal.confirm_test_success_message'|trans }}');
+                        alert('{{ 'mailmagazine.confirm.modal.confirm_test_success_message'|trans }}');
                         $('#testSendModal').modal('hide');
                     }).fail(function (res) {
-                        alert('{{ 'plugin.mailmagazine.confirm.modal.confirm_test_fail_message'|trans }}');
+                        alert('{{ 'mailmagazine.confirm.modal.confirm_test_fail_message'|trans }}');
                     });
                 }
             })
@@ -80,7 +80,7 @@
                             <div class="col-8">
                                 <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
                                     <span class="card-title">
-                                        {{ 'plugin.mailmagazine.confirm.html'|trans }}
+                                        {{ 'mailmagazine.confirm.html'|trans }}
                                     </span>
                                     <i class="fa fa-question-circle fa-lg ml-1"></i>
                                 </div>
@@ -94,15 +94,15 @@
                             <table class="table table-striped">
                                 <tbody>
                                     <tr>
-                                        <th class="w-25">{{ 'plugin.mailmagazine.select.label_subject'|trans }}</th>
+                                        <th class="w-25">{{ 'mailmagazine.select.label_subject'|trans }}</th>
                                         <td>{{ subject_itm }}</td>
                                     </tr>
                                     <tr>
-                                        <th>{{ 'plugin.mailmagazine.select.label_body'|trans }}</th>
+                                        <th>{{ 'mailmagazine.select.label_body'|trans }}</th>
                                         <td><xmp>{{ body_itm }}</xmp></td>
                                     </tr>
                                     <tr>
-                                        <th>{{ 'plugin.mailmagazine.select.label_body_html'|trans }}</th>
+                                        <th>{{ 'mailmagazine.select.label_body_html'|trans }}</th>
                                         <td><xmp>{{ htmlBody_itm|raw }}</xmp></td>
                                     </tr>
                                 </tbody>
@@ -121,7 +121,7 @@
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
                             <a class="c-beseLink" href="{{ url('plugin_mail_magazine') }}"  onclick="changeAction('{{ url('plugin_mail_magazine_select') }}/{{id}}'); return false;">
-                                <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.mailmagazine.confirm.btn_back'|trans }}</span>
+                                <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.confirm.btn_back'|trans }}</span>
                             </a>
                         </div>
                     </div>
@@ -129,12 +129,12 @@
                         <div class="row align-items-center justify-content-end">
                             <div class="col-auto">
                                 <a class="btn btn-primary btn-block btn-lg active" role="button" data-toggle="modal" data-target="#testSendModal">
-                                    {{ 'plugin.mailmagazine.confirm.btn_send_test'|trans }}
+                                    {{ 'mailmagazine.confirm.btn_send_test'|trans }}
                                 </a>
                             </div>
                             <div class="col-auto">
                                 <button class="btn btn-danger btn-block btn-lg" id="sendMailMagazine">
-                                    {{ 'plugin.mailmagazine.confirm.btn_send'|trans }}
+                                    {{ 'mailmagazine.confirm.btn_send'|trans }}
                                 </button>
                             </div>
                         </div>
@@ -147,16 +147,16 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">{{ 'plugin.mailmagazine.confirm.modal.title'|trans }}</h4>
+                    <h4 class="modal-title">{{ 'mailmagazine.confirm.modal.title'|trans }}</h4>
                 </div>
                 <div class="modal-body">
                     <form class="form-horizontal">
                         <div class="form-group">
                             <label for="testEmail" class="col-sm-2 control-label">
-                                {{ 'plugin.mailmagazine.confirm.modal.label_from'|trans }}
+                                {{ 'mailmagazine.confirm.modal.label_from'|trans }}
                             </label>
                             <div class="col-sm-10">
-                                <input type="email" class="form-control" id="testEmail" placeholder="{{ 'plugin.mailmagazine.confirm.modal.placeholder_from'|trans }}" value="{{ testMailTo }}" required>
+                                <input type="email" class="form-control" id="testEmail" placeholder="{{ 'mailmagazine.confirm.modal.placeholder_from'|trans }}" value="{{ testMailTo }}" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -168,8 +168,8 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-primary" id="sendTestMail">{{ 'plugin.mailmagazine.confirm.modal.btn_send'|trans }}</button>
-                    <button class="btn btn-default" data-dismiss="modal">{{ 'plugin.mailmagazine.confirm.modal.btn_cancel'|trans }}</button>
+                    <button class="btn btn-primary" id="sendTestMail">{{ 'mailmagazine.confirm.modal.btn_send'|trans }}</button>
+                    <button class="btn btn-default" data-dismiss="modal">{{ 'mailmagazine.confirm.modal.btn_cancel'|trans }}</button>
                 </div>
             </div>
         </div>
