--- a/Resource/template/admin/history_result.twig
+++ b/Resource/template/admin/history_result.twig
@@ -7,12 +7,12 @@
  For the full copyright and license information, please view the LICENSE
  file that was distributed with this source code.
 #}
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['customer', 'mailmagazine', 'mailmagazine_history'] %}
+{% set menus = ['mailmagazine', 'mailmagazine_history'] %}
 
-{% block title %}{{ 'plugin.mailmagazine.history.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
+{% block title %}{{ 'mailmagazine.history.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'mailmagazine.title'|trans }}{% endblock %}
 
 {% block main %}
     <div class="c-contentsArea__cols">
@@ -25,7 +25,7 @@
                                 <div class="col-8">
                                     <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
                                         <span class="card-title">
-                                            {{ 'plugin.mailmagazine.history.result.number_record'|trans }} <span class="normal"><strong>{{ pagination.totalItemCount }}</strong>
+                                            {{ 'mailmagazine.history.result.number_record'|trans }} <span class="normal"><strong>{{ pagination.totalItemCount }}</strong>
                                         </span>
                                     </div>
                                 </div>
@@ -41,9 +41,9 @@
                                 <div class="d-inline-block mr-2">
                                     <select class="custom-select" onchange="location = this.value;">
                                         {% for pageMax in pageMaxis %}
-                                            <option {% if pageMax.name == page_count%} selected {% endif %}
-                                                    value="{{ path('plugin_mail_magazine_history_result_page', {'id': historyId, 'page_no': 1, 'page_count': pageMax.name}) }}">
-                                                {{ pageMax.name|e }}{{ 'common.label.num'|trans }}</option>
+                                            <option {% if pageMax.name == page_count %} selected {% endif %}
+                                                    value="{{ path('admin_customer_page', {'page_no': 1, 'page_count': pageMax.name }) }}">
+                                                {{ 'admin.common.count'|trans({ '%count%': pageMax.name }) }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
@@ -56,10 +56,10 @@
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th class="border-top-0 pt-2 pb-2">{{ 'plugin.mailmagazine.history.result.th_status'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-2">{{ 'plugin.mailmagazine.history.result.th_id'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-2">{{ 'plugin.mailmagazine.history.result.th_from'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-2">{{ 'plugin.mailmagazine.history.result.th_name'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-2">{{ 'mailmagazine.history.result.th_status'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-2">{{ 'mailmagazine.history.result.th_id'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-2">{{ 'mailmagazine.history.result.th_from'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-2">{{ 'mailmagazine.history.result.th_name'|trans }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -68,15 +68,15 @@
                                         <td class="align-middle text-left">
                                             {% if result.status == '0' %}
                                                 <span class="badge badge-ec-blue">
-                                                    {{ 'plugin.mailmagazine.history.result.status_unsend'|trans }}
+                                                    {{ 'mailmagazine.history.result.status_unsend'|trans }}
                                                 </span>
                                             {% elseif result.status == '1' %}
                                                 <span class="badge badge-ec-green">
-                                                    {{ 'plugin.mailmagazine.history.result.status_sent'|trans }}
+                                                    {{ 'mailmagazine.history.result.status_sent'|trans }}
                                                 </span>
                                             {% elseif result.status == '2' %}
                                                 <span class="badge badge-ec-red">
-                                                    {{ 'plugin.mailmagazine.history.result.status_fail'|trans }}
+                                                    {{ 'mailmagazine.history.result.status_fail'|trans }}
                                                 </span>
                                     {% else %}
                                                 {{ result.status }}
@@ -94,7 +94,7 @@
                         <div class="card-body mb-lg-5">
                             <div class="row">
                                 <div class="col-auto">
-                                    {{ 'plugin.mailmagazine.history.result.no_record'|trans }}
+                                    {{ 'mailmagazine.history.result.no_record'|trans }}
                                 </div>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                 <div class="col-6">
                     <div class="c-conversionArea__leftBlockItem">
                         <a class="c-beseLink" href="{{ url('plugin_mail_magazine_history') }}">
-                            <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.mailmagazine.history.preview.btn_back'|trans }}</span>
+                            <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.history.preview.btn_back'|trans }}</span>
                         </a>
                     </div>
                 </div>
