--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -11,12 +11,12 @@
 [メルマガ管理]-[配信内容設定]-[一覧・検索]画面
 #}
 
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['customer', 'mailmagazine', 'mailmagazine'] %}
+{% set menus = ['mailmagazine', 'mailmagazine'] %}
 
-{% block title %}{{ 'plugin.mailmagazine.index.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
+{% block title %}{{ 'mailmagazine.index.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'mailmagazine.title'|trans }}{% endblock %}
 
 {% form_theme searchForm '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
@@ -110,22 +110,16 @@ function fnChangeActionSubmit(action) {
 {% block main %}
 <form name="search_form" id="search_form" method="post" action="">
     {{ form_widget(searchForm._token) }}
-    <!--検索条件設定テーブルここから-->
     <div class="c-outsideBlock">
         <div class="c-outsideBlock__contents">
             <div class="row justify-content-start">
                 <div class="col-6">
                     <div class="mb-2">
-                        <label class="col-form-label">{{ 'admin.customer.index.112'|trans }}</label>
-                        {{ form_widget(searchForm.multi, { attr: { placeholder: '会員ID・メールアドレス・お名前'} } ) }}
+                        <label class="col-form-label">{{ 'admin.customer.multi_search_label'|trans }}</label>
+                        {{ form_widget(searchForm.multi) }}
                         {{ form_errors(searchForm.multi) }}
                     </div>
-                    <div class="d-inline-block mb-3 collapsed" data-toggle="collapse" href="#searchDetail" aria-expanded="false" aria-controls="searchDetail">
-                        <a>
-                            <i class="fa font-weight-bold mr-1 fa-plus-square-o"></i>
-                            <span class="font-weight-bold">{{ 'admin.customer.index.detailed_search'|trans }}</span>
-                        </a>
-                    </div>
+                    <div class="d-inline-block mb-3 collapsed" data-toggle="collapse" href="#searchDetail" aria-expanded="false" aria-controls="searchDetail"><a><i class="fa font-weight-bold mr-1 fa-plus-square-o"></i><span class="font-weight-bold">{{ 'admin.common.search_detail'|trans }}</span></a></div>
                 </div>
             </div>
         </div>
@@ -134,7 +128,7 @@ function fnChangeActionSubmit(action) {
                 <div class="col">
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="col-form-label">{{ 'admin.customer.index.113'|trans }}</p>
+                            <p class="col-form-label">{{ 'admin.customer.customer_status'|trans }}</p>
                             {{ form_widget(searchForm.customer_status, { 'label_attr': { 'class': 'checkbox-inline'}}) }}
                             {{ form_errors(searchForm.customer_status) }}
                         </div>
@@ -142,7 +136,7 @@ function fnChangeActionSubmit(action) {
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.129'|trans }}</label>
+                        <label>{{ 'admin.order.purchase_product'|trans }}</label>
                         {{ form_widget(searchForm.buy_product_name) }}
                         {{ form_errors(searchForm.buy_product_name) }}
                     </div>
@@ -152,7 +146,7 @@ function fnChangeActionSubmit(action) {
                 <div class="col">
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="col-form-label">{{ 'admin.customer.index.114'|trans }}</p>
+                            <p class="col-form-label">{{ 'admin.common.gender'|trans }}</p>
                             {{ form_widget(searchForm.sex, { 'label_attr': { 'class': 'checkbox-inline'}}) }}
                             {{ form_errors(searchForm.sex) }}
                         </div>
@@ -160,13 +154,13 @@ function fnChangeActionSubmit(action) {
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.124'|trans }}</label>
+                        <label>{{ 'admin.order.purchase_price'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.buy_total_start) }}
                                 {{ form_errors(searchForm.buy_total_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.buy_total_end) }}
                                 {{ form_errors(searchForm.buy_total_end) }}
@@ -178,7 +172,7 @@ function fnChangeActionSubmit(action) {
             <div class="row mb-2">
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.115'|trans }}</label>
+                        <label>{{ 'admin.customer.birth_month'|trans }}</label>
                         <div class="row">
                             <div class="col-5">
                                 {{ form_widget(searchForm.birth_month) }}
@@ -190,13 +184,13 @@ function fnChangeActionSubmit(action) {
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.126'|trans }}</label>
+                        <label>{{ 'admin.order.purchase_count'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.buy_times_start) }}
                                 {{ form_errors(searchForm.buy_times_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.buy_times_end) }}
                                 {{ form_errors(searchForm.buy_times_end) }}
@@ -208,13 +202,13 @@ function fnChangeActionSubmit(action) {
             <div class="row mb-2">
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.116'|trans }}</label>
+                        <label>{{ 'admin.common.birth_day'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.birth_start) }}
                                 {{ form_errors(searchForm.birth_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.birth_end) }}
                                 {{ form_errors(searchForm.birth_end) }}
@@ -224,13 +218,13 @@ function fnChangeActionSubmit(action) {
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.120'|trans }}</label>
+                        <label>{{ 'admin.common.create_date'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.create_date_start) }}
                                 {{ form_errors(searchForm.create_date_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.create_date_end) }}
                                 {{ form_errors(searchForm.create_date_end) }}
@@ -242,7 +236,7 @@ function fnChangeActionSubmit(action) {
             <div class="row mb-2">
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.118'|trans }}</label>
+                        <label>{{ 'admin.common.pref'|trans }}</label>
                         <div class="row">
                             <div class="col-5">
                                 {{ form_widget(searchForm.pref) }}
@@ -254,13 +248,13 @@ function fnChangeActionSubmit(action) {
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.122'|trans }}</label>
+                        <label>{{ 'admin.common.update_date'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.update_date_start) }}
                                 {{ form_errors(searchForm.update_date_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.update_date_end) }}
                                 {{ form_errors(searchForm.update_date_end) }}
@@ -269,23 +263,23 @@ function fnChangeActionSubmit(action) {
                     </div>
                 </div>
             </div>
-            <div class="row mb-4">
+            <div class="row mb-2">
                 <div class="col">
                     <div class="mb-3">
-                        <label>{{ 'admin.customer.index.119'|trans }}</label>
+                        <label>{{ 'admin.common.phone_number'|trans }}</label>
                         {{ form_widget(searchForm.phone_number) }}
                         {{ form_errors(searchForm.phone_number) }}
                     </div>
                 </div>
                 <div class="col">
                     <div>
-                        <label>{{ 'admin.customer.index.130'|trans }}</label>
+                        <label>{{ 'admin.order.last_buy_date'|trans }}</label>
                         <div class="form-row align-items-center">
                             <div class="col">
                                 {{ form_widget(searchForm.last_buy_start) }}
                                 {{ form_errors(searchForm.last_buy_start) }}
                             </div>
-                            <div class="col-auto text-center"><span>〜</span></div>
+                            <div class="col-auto text-center"><span>{{ 'admin.common.separator__range'|trans }}</span></div>
                             <div class="col">
                                 {{ form_widget(searchForm.last_buy_end) }}
                                 {{ form_errors(searchForm.last_buy_end) }}
@@ -294,16 +288,39 @@ function fnChangeActionSubmit(action) {
                     </div>
                 </div>
             </div>
+
+            {# エンティティ拡張の自動出力 #}
+            {% for f in searchForm if f.vars.eccube_form_options.auto_render %}
+                {# TODO 1項目1行になるのを改善 #}
+                <div class="row mb-2">
+                    {% if f.vars.eccube_form_options.form_theme %}
+                        {% form_theme f f.vars.eccube_form_options.form_theme %}
+                        {{ form_row(f) }}
+                    {% else %}
+                        <div class="col">
+                            <div class="mb-3">
+                                <label>{{ f.vars.label|trans }}</label>
+                                {{ form_widget(f) }}
+                                {{ form_errors(f) }}
+                            </div>
+                        </div>
+                    {% endif %}
+                </div>
+            {% endfor %}
+
             <div class="d-block text-center">
-                <button class="btn btn-ec-regular" type="reset">{{ 'admin.customer.index.132'|trans }}</button>
+                <button class="btn btn-ec-regular" type="reset">{{ 'admin.common.search_clear'|trans }}</button>
             </div>
         </div>
     </div>
     <div class="c-outsideBlock__contents mb-5">
-        <button type="submit" class="btn btn-ec-conversion px-5">{{ 'admin.customer.index.133'|trans }}</button>
+        <button type="submit" class="btn btn-ec-conversion px-5">{{ 'admin.common.search'|trans }}</button>
         {% if pagination %}
-            <span class="font-weight-bold ml-2">{{ 'admin.customer.index.134'|trans({'%count%':pagination.totalItemCount}) }}</span>
+            <span class="font-weight-bold ml-2">{{ 'admin.common.search_result'|trans({'%count%':pagination.totalItemCount}) }}</span>
         {% endif %}
+    </div>
+    <div class="c-outsideBlock__contents mb-5">
+        {{ include('@admin/search_items.twig', { 'form': searchForm }, ignore_missing = true) }}
     </div>
     <div class="c-contentsArea__cols">
         <div class="c-contentsArea__primaryCol">
@@ -317,9 +334,9 @@ function fnChangeActionSubmit(action) {
                             <div class="d-inline-block mr-2">
                                 <select class="custom-select" onchange="location = this.value;">
                                     {% for pageMax in pageMaxis %}
-                                        <option {% if pageMax.name == page_count%} selected {% endif %}
-                                                value="{{ path('plugin_mail_magazine_page', {'page_no': 1, 'page_count': pageMax.name}) }}">
-                                            {{ pageMax.name|e }}{{ 'common.label.num'|trans }}</option>
+                                        <option {% if pageMax.name == page_count %} selected {% endif %}
+                                                value="{{ path('admin_customer_page', {'page_no': 1, 'page_count': pageMax.name }) }}">
+                                            {{ 'admin.common.count'|trans({ '%count%': pageMax.name }) }}</option>
                                     {% endfor %}
                                 </select>
                             </div>
@@ -333,10 +350,10 @@ function fnChangeActionSubmit(action) {
                             <table class="table">
                                 <thead>
                                     <tr>
-                                        <th class="border-top-0 pt-2 pb-3 pl-3">{{ 'admin.customer.index.140'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.customer.index.141'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.customer.index.142'|trans }}</th>
-                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.customer.index.143'|trans  }}</th>
+                                        <th class="border-top-0 pt-2 pb-3 pl-3">{{ 'admin.customer.customer_id'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.common.name'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.common.phone_number'|trans }}</th>
+                                        <th class="border-top-0 pt-2 pb-3">{{ 'admin.common.mail_address'|trans }}</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -344,7 +361,7 @@ function fnChangeActionSubmit(action) {
                                     <tr>
                                         <td class="align-middle pl-3">{{ Customer.id }}</td>
                                         <td class="align-middle"><a href="{{ url('admin_customer_edit', { 'id': Customer.id}) }}">{{ Customer.name01 }}&nbsp;{{ Customer.name02 }}</a></td>
-                                        <td class="align-middle">{{ Customer.tel01 }}-{{ Customer.tel02 }}-{{ Customer.tel03 }}</td>
+                                        <td class="align-middle">{{ Customer.phone_number }}</td>
                                         <td class="align-middle">{{ Customer.email }}</td>
                                     </tr>
                                 {% endfor %}
@@ -352,13 +369,13 @@ function fnChangeActionSubmit(action) {
                             </table>
                             <div class="row justify-content-md-center mb-4">
                                 {% if pagination.totalItemCount > 0 %}
-                                    {% include "@admin/styleguide_pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'plugin_mail_magazine_page' } %}
+                                    {% include "@admin/pager.twig" with { 'pages' : pagination.paginationData, 'routes' : 'admin_customer_page' } %}
                                 {% endif %}
                             </div>
                             <div class="row justify-content-md-center mb-4 ">
                                 <div class="col-auto">
                                     <button class="btn btn-ec-regular btn-lg" onclick="fnChangeActionSubmit('{{ url('plugin_mail_magazine_select') }}'); return false;">
-                                        {{ 'plugin.mailmagazine.index.btn_select_template'|trans }}
+                                        {{ 'mailmagazine.index.btn_select_template'|trans }}
                                     </button>
                                 </div>
                             </div>
