--- a/Resource/template/admin/template_select.twig
+++ b/Resource/template/admin/template_select.twig
@@ -12,12 +12,12 @@
 [メルマガ管理]-[配信内容設定]-[テンプレート選択]画面
 #}
 
-{% extends '@admin/styleguide_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
 
-{% set menus = ['customer', 'mailmagazine', 'mailmagazine'] %}
+{% set menus = ['mailmagazine', 'mailmagazine'] %}
 
-{% block title %}{{ 'plugin.mailmagazine.index.title'|trans }}{% endblock %}
-{% block sub_title %}{{ 'plugin.mailmagazine.title'|trans }}{% endblock %}
+{% block title %}{{ 'mailmagazine.index.title'|trans }}{% endblock %}
+{% block sub_title %}{{ 'mailmagazine.title'|trans }}{% endblock %}
 
 {% form_theme form '@admin/Form/bootstrap_4_horizontal_layout.html.twig' %}
 
@@ -59,7 +59,7 @@
                             <div class="col-8">
                                 <div class="d-inline-block" data-toggle="tooltip" data-placement="top" title="Tooltip">
                                     <span class="card-title">
-                                        {{ 'plugin.mailmagazine.select.card_title'|trans }}
+                                        {{ 'mailmagazine.select.card_title'|trans }}
                                     </span>
                                     <i class="fa fa-question-circle fa-lg ml-1"></i>
                                 </div>
@@ -120,7 +120,7 @@
                         <div style="display: none">
                             {{ form_rest(form) }}
                         </div>
-                        <span class="help-block">{{ 'plugin.mailmagazine.select.note_name'|trans }}</span>
+                        <span class="help-block">{{ 'mailmagazine.select.note_name'|trans }}</span>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
                     <div class="col-6">
                         <div class="c-conversionArea__leftBlockItem">
                             <a class="c-beseLink" href="{{ url('plugin_mail_magazine') }}" onclick="changeAction('{{ url('plugin_mail_magazine') }}'); return false;">
-                                <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'plugin.mailmagazine.select.btn_back'|trans }}</span>
+                                <i class="fa fa-backward" aria-hidden="true"></i><span>{{ 'mailmagazine.select.btn_back'|trans }}</span>
                             </a>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                         <div class="row align-items-center justify-content-end">
                             <div class="col-auto">
                                 <button class="btn btn-ec-conversion px-5" type="submit">
-                                    {{ 'plugin.mailmagazine.select.btn_confirm'|trans }}
+                                    {{ 'mailmagazine.select.btn_confirm'|trans }}
                                 </button>
                             </div>
                         </div>
